Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/Artifact__c.object-meta.xml
<CustomObject>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>