Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>The description of the package</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>