Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/fields/No_Namespace__c.field-meta.xml
<CustomField>
    <fullName>No_Namespace__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the package creation with no namespace; available only for unlocked packages.</inlineHelpText>
    <label>No Namespace</label>
    <type>Checkbox</type>
</CustomField>