Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/fields/Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Id__c</fullName>
    <inlineHelpText>Related package identifier. Being used as a Package Id for package version creation and also in use into the sfdx-project.json file as a package alias.</inlineHelpText>
    <label>Package Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>