Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <inlineHelpText>For detailed information : https://developer.salesforce.com/docs/atlas.en-us.sfdx_dev.meta/sfdx_dev/sfdx_dev_dev2gp_plan_pkg_types.htm</inlineHelpText>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlocked</fullName>
                <default>true</default>
                <label>Unlocked</label>
            </value>
            <value>
                <fullName>Second-Generation Package</fullName>
            </value>
            <value>
                <fullName>First-Generation Package</fullName>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
                <isActive>false</isActive>
                <label>Unmanaged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>