Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Deployment_Flow__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>