Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/fields/Source_Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Source_Api_Version__c</fullName>
    <inlineHelpText>The API version that the source of your package is compatible with. This field is important if you’re using a metadata type that has changed in a recent salesforce release.</inlineHelpText>
    <label>Source Api Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
            <value>
                <fullName>5.0</fullName>
            </value>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
            <value>
                <fullName>8.0</fullName>
            </value>
            <value>
                <fullName>9.0</fullName>
            </value>
            <value>
                <fullName>10.0</fullName>
            </value>
            <value>
                <fullName>11.0</fullName>
            </value>
            <value>
                <fullName>12.0</fullName>
            </value>
            <value>
                <fullName>13.0</fullName>
            </value>
            <value>
                <fullName>14.0</fullName>
            </value>
            <value>
                <fullName>15.0</fullName>
            </value>
            <value>
                <fullName>16.0</fullName>
            </value>
            <value>
                <fullName>17.0</fullName>
            </value>
            <value>
                <fullName>18.0</fullName>
            </value>
            <value>
                <fullName>19.0</fullName>
            </value>
            <value>
                <fullName>20.0</fullName>
            </value>
            <value>
                <fullName>21.0</fullName>
            </value>
            <value>
                <fullName>22.0</fullName>
            </value>
            <value>
                <fullName>23.0</fullName>
            </value>
            <value>
                <fullName>24.0</fullName>
            </value>
            <value>
                <fullName>25.0</fullName>
            </value>
            <value>
                <fullName>26.0</fullName>
            </value>
            <value>
                <fullName>27.0</fullName>
            </value>
            <value>
                <fullName>28.0</fullName>
            </value>
            <value>
                <fullName>29.0</fullName>
            </value>
            <value>
                <fullName>30.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>