Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/fields/Target_Dev_Hub_Org__c.field-meta.xml
<CustomField>
    <fullName>Target_Dev_Hub_Org__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Copado org credential for the dev hub which will be used to create and store the package and its versions</inlineHelpText>
    <label>Target Dev Hub Org</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only dev hub org credentials can be selected. Given value not found or it is not a dev hub org.</errorMessage>
        <filterItems>
            <field>Org__c.is_Developer_Hub_Org__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Artifacts (Target Dev Hub Org)</relationshipLabel>
    <relationshipName>packageArtifacts</relationshipName>
    <type>Lookup</type>
</CustomField>