Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/recordTypes/Git_Artifact.recordType-meta.xml
<RecordType>
    <fullName>Git_Artifact</fullName>
    <active>true</active>
    <description>Version Control System centric package</description>
    <label>Git Package</label>
</RecordType>