Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/recordTypes/Package_Artifact.recordType-meta.xml
<RecordType>
    <fullName>Package_Artifact</fullName>
    <active>true</active>
    <description>Salesforce unlocked, First Generation Package or Second-Generation Package as a package</description>
    <label>Salesforce Package</label>
</RecordType>