Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/recordTypes/User_Story_Bundle.recordType-meta.xml
<RecordType>
    <fullName>User_Story_Bundle</fullName>
    <active>true</active>
    <description>User Story Bundle</description>
    <label>User Story Bundle</label>
</RecordType>