Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/validationRules/Artifact_Repo_Control_For_Package_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Artifact_Repo_Control_For_Package_Type</fullName>
    <active>true</active>
    <description>Package Repository null control depending of Package Type</description>
    <errorConditionFormula>IF(
	AND(	
		RecordType.DeveloperName != &apos;User_Story_Bundle&apos;,
		OR(
			AND(
				ISBLANK(Artifact_Repository__c), 
				(ISPICKVAL(Package_Type__c, &apos;Unlocked&apos;) || ISPICKVAL(Package_Type__c, &apos;Second-Generation Package&apos;))
			),
			(NOT(ISBLANK(Artifact_Repository__c)) &amp;&amp; ISPICKVAL(Package_Type__c, &apos;First-Generation Package&apos;) )
		)
	), true, false
)</errorConditionFormula>
    <errorDisplayField>Artifact_Repository__c</errorDisplayField>
    <errorMessage>Repository relation for packages is required for Unlocked and Second Generation Packages and should be empty for First Second Generation Packages</errorMessage>
</ValidationRule>