Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/validationRules/ArtifactNameCannotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ArtifactNameCannotChange</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Name) != Name</errorConditionFormula>
    <errorMessage>Package names are in use for DX folder structure, therefore, package names are not editable.</errorMessage>
</ValidationRule>