Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/validationRules/Name_should_not_contain_empty_space.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_should_not_contain_empty_space</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Name,&apos; &apos;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Package name cannot contain white spaces</errorMessage>
</ValidationRule>