Dummy_Package_for_scratch_org/main/default/objects/Artifact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Package_Id__c</columns>
    <columns>Artifact_Version__c</columns>
    <columns>Package_Namespace__c</columns>
    <columns>Package_Type__c</columns>
    <columns>Artifact_Repository__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Org_Credential__c</columns>
    <columns>Description__c</columns>
    <columns>Target_Dev_Hub_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>